exports[`chat stream reducer > done marks any still-running tool blocks as done 1`] = `
{
  "id": "m1",
  "role": "assistant",
  "content": "",
  "timestamp": 0,
  "isStreaming": false,
  "toolBlocks": [
    {
      "id": "t1",
      "name": "Read",
      "input": "",
      "status": "done"
    }
  ],
  "contentBlocks": [
    {
      "type": "tool",
      "toolId": "t1"
    }
  ],
  "cost": 0.001,
  "turns": 2
}
`;

exports[`chat stream reducer > error fills empty content and stops streaming 1`] = `
{
  "id": "m1",
  "role": "assistant",
  "content": "Error: boom",
  "timestamp": 0,
  "isStreaming": false
}
`;

exports[`chat stream reducer > full assistant turn: thinking, two tools, summaries, block_stop, done 1`] = `
{
  "id": "m1",
  "role": "assistant",
  "content": "",
  "timestamp": 0,
  "isStreaming": false,
  "thinking": {
    "content": "Let me check the file and search.",
    "done": true,
    "id": "th1"
  },
  "thinkingBlocks": [
    {
      "id": "th1",
      "content": "Let me check the file and search.",
      "done": true
    }
  ],
  "contentBlocks": [
    {
      "type": "thinking",
      "thinkingId": "th1"
    },
    {
      "type": "tool",
      "toolId": "t1"
    },
    {
      "type": "tool",
      "toolId": "t2"
    }
  ],
  "toolBlocks": [
    {
      "id": "t1",
      "name": "Read",
      "input": "{\\"path\\":\\"a.ts\\"}",
      "status": "done",
      "summary": "Read a.ts",
      "commandEntries": [
        {
          "label": "a.ts",
          "kind": "read"
        }
      ]
    },
    {
      "id": "t2",
      "name": "Grep",
      "input": "{\\"pattern\\":\\"foo\\"}",
      "status": "done",
      "summary": "Searched for foo",
      "commandEntries": [
        {
          "label": "foo",
          "kind": "search"
        }
      ]
    }
  ],
  "cost": 0.012,
  "turns": 1
}
`;

exports[`chat stream reducer > interleaved thinking and tool blocks preserve contentBlocks order 1`] = `
{
  "id": "m1",
  "role": "assistant",
  "content": "",
  "timestamp": 0,
  "isStreaming": true,
  "thinking": {
    "content": "second",
    "done": true,
    "id": "th2"
  },
  "thinkingBlocks": [
    {
      "id": "th1",
      "content": "first",
      "done": false
    },
    {
      "id": "th2",
      "content": "second",
      "done": true
    }
  ],
  "contentBlocks": [
    {
      "type": "thinking",
      "thinkingId": "th1"
    },
    {
      "type": "tool",
      "toolId": "t1"
    },
    {
      "type": "thinking",
      "thinkingId": "th2"
    }
  ],
  "toolBlocks": [
    {
      "id": "t1",
      "name": "Read",
      "input": "",
      "status": "done"
    }
  ]
}
`;

exports[`chat stream reducer > streaming tool input accumulates across deltas 1`] = `
{
  "id": "m1",
  "role": "assistant",
  "content": "",
  "timestamp": 0,
  "isStreaming": true,
  "toolBlocks": [
    {
      "id": "t1",
      "name": "Bash",
      "input": "npm run test",
      "status": "done"
    }
  ],
  "contentBlocks": [
    {
      "type": "tool",
      "toolId": "t1"
    }
  ]
}
`;
